# site

./: Cargo.toml  links.yaml
.github/workflows/: rust.yml
articles/: 2024-03-16-1_articles_in_march.md  2024-03-16_init.md  2024-03-17_articles_in_march.md  2024-03-18_information_retrieval.md  2024-03-20_static_fulltext_search.md  2026-01-05_low_dependency_programs.md
public/: code.js  style.css
src/: article.rs  db.rs  home.rs  html.rs  links.rs  main.rs  tags.rs  template.html  templates.rs  utils.rs
src/templates/: article.rs  links.rs  search.rs  tags.rs
templates/: article.html  base.html  index.html  links.html  search.html  tag.html
