[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cc="*"

[dependencies]
askama = {git= "https://github.com/askama-rs/askama", rev="3cf5d85"}
pulldown-cmark = "0.13.0"
tree-sitter = "0.25.3"
tree-sitter-highlight = "0.25.3"
tree-sitter-python = "0.23.6"
tree-sitter-rust = "0.23.2"
