[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cc="*"

[dependencies]
askama = {git= "https://github.com/askama-rs/askama", rev="3cf5d85"}
base64ct = { version = "1.7.3", features = ["std"] }
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
eyre = "0.6.12"
jiff = { version = "0.2.4", features = ["serde"] }
lol_html = "2.2.0"
notify-debouncer-mini = "0.4.1"
pulldown-cmark = "0.13.0"
salsa = "0.21.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
sha1 = "0.10.6"
tree-sitter = "0.25.3"
tree-sitter-highlight = "0.25.3"
tree-sitter-python = "0.23.6"
tree-sitter-rust = "0.23.2"
